<<<<<<< Updated upstream
[gd_scene load_steps=25 format=3 uid="uid://cpqkqsbg22tkk"]
=======
[gd_scene load_steps=26 format=3 uid="uid://cpqkqsbg22tkk"]
>>>>>>> Stashed changes

[ext_resource type="Script" path="res://Skripte/Menü.gd" id="1_ynd03"]
[ext_resource type="Texture2D" uid="uid://byd0qr3ivpfgv" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/BG.png" id="1_yyfok"]
[ext_resource type="Texture2D" uid="uid://yf6e7b57gxr0" path="res://Gui/Space_Game_GUI_PNG/PNG/Ship_Shop/Ship_Icon.png" id="2_gb258"]
[ext_resource type="Texture2D" uid="uid://bjwiap8hremjv" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/Start_BTN.png" id="2_wsuxf"]
[ext_resource type="Texture2D" uid="uid://dwwrjyiygogy8" path="res://Spaceship/Antrieb.png" id="3_1vqkt"]
[ext_resource type="Texture2D" uid="uid://cjtinx5n70fok" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/Exit_BTN.png" id="3_ivrra"]
[ext_resource type="AudioStream" uid="uid://bi3iatw3mdl4k" path="res://Sounds/GUI/ObservingTheStar/ObservingTheStar.ogg" id="5_8gbue"]
[ext_resource type="Texture2D" uid="uid://lbnnbd8k873h" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/Info_BTN.png" id="6_3nmul"]
[ext_resource type="Texture2D" uid="uid://bc0pbmj0np2fw" path="res://Gui/Space_Game_GUI_PNG/PNG/Rating/Table_02.png" id="7_hslnn"]
[ext_resource type="Texture2D" uid="uid://cgrh6kusnoajj" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/Rating_BTN.png" id="7_l57ys"]
[ext_resource type="Texture2D" uid="uid://d0ybjqar6trru" path="res://Gui/Space_Game_GUI_PNG/PNG/Hangar/Window.png" id="8_l7yie"]
[ext_resource type="Texture2D" uid="uid://b46fynvup5ltv" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/Settings_BTN.png" id="8_pisru"]
[ext_resource type="Texture2D" uid="uid://hk20lpx56cg5" path="res://Gui/Title/Title-1.png" id="9_8gyvl"]
[ext_resource type="Texture2D" uid="uid://bu631aqwo2unp" path="res://Gui/Space_Game_GUI_PNG/PNG/Main_Menu/FAQ_BTN.png" id="9_wpsg6"]
[ext_resource type="Texture2D" uid="uid://hj17166r8rf1" path="res://Gui/Title/Title-2.png" id="10_xhbly"]
[ext_resource type="Texture2D" uid="uid://dn43w366x4wym" path="res://Gui/Title/Title-3.png" id="11_frs5b"]
[ext_resource type="Texture2D" uid="uid://6wsqba14xunb" path="res://Gui/Title/Title-4.png" id="12_p4xgq"]
[ext_resource type="Texture2D" uid="uid://dnpmglfi0qxn" path="res://Gui/Space_Game_GUI_PNG/PNG/You_Win/Window.png" id="13_4bc55"]
[ext_resource type="Texture2D" uid="uid://depqbkq1xh5q" path="res://Erde/earth.png" id="13_61s3c"]
[ext_resource type="Texture2D" uid="uid://cx2bjo3q4fdif" path="res://Erde/earth1.png" id="14_toeog"]
[ext_resource type="Texture2D" uid="uid://dqersn35m0l8r" path="res://Erde/earth Kopie.png" id="15_gjb8d"]
[ext_resource type="Texture2D" uid="uid://f38ri6yg6du0" path="res://Erde/earth Kopie 2.png" id="16_xrbxy"]
[ext_resource type="Texture2D" uid="uid://bdhqpyb7pg7l7" path="res://Gui/Space_Game_GUI_PNG/PNG/Rating/Window.png" id="20_222lp"]
<<<<<<< Updated upstream
=======
[ext_resource type="Texture2D" uid="uid://btqwo1p7fvyow" path="res://Gui/Space_Game_GUI_PNG/PNG/Pause/Table.png" id="24_aqi26"]
>>>>>>> Stashed changes

[sub_resource type="SpriteFrames" id="SpriteFrames_vulfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_61s3c")
}, {
"duration": 1.0,
"texture": ExtResource("14_toeog")
}, {
"duration": 1.0,
"texture": ExtResource("15_gjb8d")
}, {
"duration": 1.0,
"texture": ExtResource("16_xrbxy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Menü" type="Node2D"]
script = ExtResource("1_ynd03")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-820, 186)
rotation = 1.57242
scale = Vector2(0.204172, 0.277997)
texture = ExtResource("2_gb258")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-4.29476, 273.39)
rotation = -1.58498
scale = Vector2(1.66508, 0.778367)
texture = ExtResource("3_1vqkt")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(881, -209)
rotation = 1.57242
scale = Vector2(0.204172, 0.277997)
texture = ExtResource("2_gb258")
flip_v = true

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D2"]
position = Vector2(-0.603098, -273.384)
rotation = 1.56389
scale = Vector2(1.69318, 0.599361)
texture = ExtResource("3_1vqkt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-20, 47)
scale = Vector2(0.62552, 0.693518)
texture = ExtResource("1_yyfok")
metadata/_edit_lock_ = true

[node name="Start" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = -29.0
offset_right = 91.0
offset_bottom = 34.0
grow_horizontal = 0
icon = ExtResource("2_wsuxf")
expand_icon = true

[node name="Exit" type="Button" parent="."]
offset_left = -63.0
offset_top = 66.0
offset_right = 69.0
offset_bottom = 117.0
icon = ExtResource("3_ivrra")
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_8gbue")
autoplay = true

[node name="Info" type="Button" parent="."]
offset_left = 17.0
offset_top = 166.0
offset_right = 67.0
offset_bottom = 215.0
icon = ExtResource("6_3nmul")
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="Info"]
visible = false
position = Vector2(26, -16)
scale = Vector2(0.285036, 0.236842)
texture = ExtResource("7_hslnn")

[node name="Rating" type="Button" parent="."]
offset_left = -160.0
offset_top = 164.0
offset_right = -106.0
offset_bottom = 216.0
icon = ExtResource("7_l57ys")
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="Rating"]
visible = false
position = Vector2(24.0001, -122.5)
scale = Vector2(0.210638, 0.179286)
texture = ExtResource("8_l7yie")

[node name="RichTextLabel" type="RichTextLabel" parent="Rating/Sprite2D"]
offset_left = -442.0
offset_top = -694.0
offset_right = 442.0
offset_bottom = 660.0
theme_override_font_sizes/normal_font_size = 88
text = "         Bestenliste

1. Raphael + Henrik
Zeit: 7:30 min

2. Max und Leander
Zeit: 9:30 min

3. Kerim und Bastian
Zeit: 11:30 min"

[node name="Exit_List" type="Button" parent="Rating/Sprite2D"]
offset_left = -204.142
offset_top = 532.669
offset_right = 213.858
offset_bottom = 661.669
icon = ExtResource("3_ivrra")

[node name="Settings" type="Button" parent="."]
offset_left = -74.0
offset_top = 165.0
offset_right = -24.0
offset_bottom = 216.0
icon = ExtResource("8_pisru")
expand_icon = true

[node name="Sprite2D3" type="Sprite2D" parent="Settings"]
visible = false
position = Vector2(26, -81)
scale = Vector2(0.166489, 0.155556)
texture = ExtResource("13_4bc55")

[node name="RichTextLabel" type="RichTextLabel" parent="Settings/Sprite2D3"]
offset_left = -402.428
offset_top = -520.714
offset_right = 425.572
offset_bottom = -365.714
theme_override_font_sizes/normal_font_size = 77
text = "   Schwierigkeitsgrad"

[node name="Simple" type="Button" parent="Settings/Sprite2D3"]
offset_left = -330.352
offset_top = -212.143
offset_right = 347.648
offset_bottom = -69.1428
theme_override_font_sizes/font_size = 67
text = "Simple"

[node name="Hard" type="Button" parent="Settings/Sprite2D3"]
offset_left = -324.345
offset_top = 128.571
offset_right = 353.655
offset_bottom = 271.571
theme_override_font_sizes/font_size = 67
text = "Hard"

[node name="A" type="Sprite2D" parent="."]
position = Vector2(-178.5, -158)
scale = Vector2(1.1, 1.12381)
texture = ExtResource("9_8gyvl")

[node name="R" type="Sprite2D" parent="."]
position = Vector2(-58.4999, -155.75)
scale = Vector2(1.37376, 1.76425)
texture = ExtResource("10_xhbly")

[node name="O" type="Sprite2D" parent="."]
position = Vector2(41.4532, -155.891)
scale = Vector2(1.81682, 1.9285)
texture = ExtResource("11_frs5b")

[node name="SE" type="Sprite2D" parent="."]
position = Vector2(176.5, -154)
scale = Vector2(1.23801, 1.87761)
texture = ExtResource("12_p4xgq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(234, 38)
scale = Vector2(0.320767, 0.330247)
sprite_frames = SubResource("SpriteFrames_vulfq")
animation = &"idle"
autoplay = "idle"
frame = 2
frame_progress = 0.116772

[node name="FAQ" type="Button" parent="."]
offset_left = 95.0
offset_top = 165.0
offset_right = 144.0
offset_bottom = 215.0
icon = ExtResource("9_wpsg6")
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="FAQ"]
visible = false
position = Vector2(26, -90)
scale = Vector2(0.164096, 0.134107)
texture = ExtResource("20_222lp")

[node name="RichTextLabel" type="RichTextLabel" parent="FAQ/Sprite2D"]
offset_left = -434.0
offset_top = -670.0
offset_right = 451.0
offset_bottom = 659.0
theme_override_font_sizes/normal_font_size = 74
text = "                  FAQ

F: Wieviele möglichkeiten gibt es zu Gewinnen?
A: 2

F: Kann man das Spiel neustarten?
A: Nein"

[node name="Exit_Faq" type="Button" parent="FAQ/Sprite2D"]
offset_left = -212.67
offset_top = 516.078
offset_right = 205.33
offset_bottom = 670.078
icon = ExtResource("3_ivrra")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(-201, 0)
scale = Vector2(0.488227, 0.388614)
texture = ExtResource("24_aqi26")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(-204, 92)
scale = Vector2(0.488227, 0.388614)
texture = ExtResource("24_aqi26")

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D4"]
offset_left = -163.858
offset_top = -33.4522
offset_right = 160.142
offset_bottom = 40.5478
theme_override_font_sizes/normal_font_size = 35
text = " Status: Disconnect"

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite2D4"]
visible = false
offset_left = -163.858
offset_top = -33.4522
offset_right = 160.142
offset_bottom = 40.5478
theme_override_font_sizes/normal_font_size = 35
text = " Status: Connected"

[node name="Button" type="Button" parent="."]
offset_left = -274.0
offset_top = -17.0
offset_right = -128.0
offset_bottom = 14.0
text = "MQTT Connection"
expand_icon = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="Rating" to="." method="_on_rating_pressed"]
[connection signal="pressed" from="Rating/Sprite2D/Exit_List" to="." method="_on_exit_list_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings/Sprite2D3/Simple" to="." method="_on_simple_pressed"]
[connection signal="pressed" from="Settings/Sprite2D3/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="FAQ" to="." method="_on_faq_pressed"]
[connection signal="pressed" from="FAQ/Sprite2D/Exit_Faq" to="." method="_on_exit_faq_pressed"]
<<<<<<< Updated upstream
=======
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
>>>>>>> Stashed changes
